--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "fix:prettier": "npm run lint:prettier -- --write"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/blob": "^0.27.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "^15.0.0-rc.0",
@@ -35,8 +37,12 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
